--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.32.0",
+    "babel-plugin-root-import": "^6.6.0",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "^4.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
