--- a/package.json
+++ b/package.json
@@ -6,21 +6,45 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
+    "storybook-generate": "sb-rn-get-stories"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@tanstack/react-query": "^5.32.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
     "babel-plugin-root-import": "^6.6.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-native": "^4.1.0",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
+    "prettier": "^3.2.5",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-offline": "^6.0.2",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "^4.10.1"
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.0.0",
+    "@react-native-community/slider": "^4.5.2",
+    "@storybook/addon-ondevice-actions": "^7.6.18",
+    "@storybook/addon-ondevice-controls": "^7.6.18",
+    "@storybook/react-native": "^7.6.18",
     "@types/react": "~18.2.45",
+    "babel-loader": "^8.3.0",
+    "eslint-plugin-unused-imports": "^3.1.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.1.3"
   },
   "private": true
